fix: Update Button styles for focus visibility
- Removed focus styles from Button component to streamline design.
- Added global focus-visible styles for better accessibility and consistency across the application.

--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -61,16 +61,6 @@
     scale: 95%;
   }
 
-  &:focus {
-    outline: none;
-  }
-
-  &:focus-visible {
-    outline: rem(2) dotted var(--button-bg);
-    outline-offset: rem(4);
-    transition-duration: 0s !important;
-  }
-
   &.primary {
     --button-bg: var(--color-primary);
     --button-color: var(--color-light);
