--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -101,3 +101,9 @@ select,
 svg * {
   transition-duration: var(--transition-duration);
 }
+
+:focus-visible {
+  outline: rem(2) dotted var(--color-primary);
+  outline-offset: rem(4);
+  transition-duration: 0s !important;
+}
